# server_copilot

./: .gitignore  Cargo.toml  README.md  about_me.txt  config.json
src/: chatbot.rs  context.rs  errors.rs  gitlab.rs  main.rs
src/chatbot/: mod.rs
src/controller/: mod.rs
src/gitlab/: mod.rs
src/server/: mod.rs
